Fixes a bug that allowed for horizontal scrolling

--- a/index/styles.css
+++ b/index/styles.css
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 #menubar-name {
   padding-left: 110px;
-  font-size:3.5em;
-  top: px;
+  font-size:3em;
+  top: 5px;
   white-space: nowrap;
-  margin-top: auto;
+  margin-top: 10px;
 }
 
 body {
@@ -18,6 +18,9 @@ body {
 
 body, html {
   max-width: 100vw;
+  margin: 0;
+  padding: 0;
+  height: 100%;
   overflow-x: hidden;
 }
 
@@ -25,9 +28,9 @@ body, html {
 #menuToggle {
   display: block;
   position: relative;
-  top: 50px;
+  top:50px;
   left: 40px;
-  z-index: 1;
+  z-index: 3;
   -webkit-user-select: none;
   user-select: none;
 }
@@ -117,25 +120,23 @@ body, html {
  * Make this absolute positioned
  * at the top left of the screen
  */
-#menu {
-  position: absolute;
-  width: 315px;
-  margin: -100px 0 0 -40px;
-  padding: 50px;
-  padding-top: 130px;
-  padding-bottom: 100%;
-  opacity: 80%;
-
-  background: #5a5a5a;
+ #menu {
+  position:fixed;
+  top:0;
+  left: 0; /* Adjust based on your layout */
+  width: 315px; /* Your set width */
+  height: 100vh;
+  margin-top: -10px;
+  padding-top: 100px; /* Your set padding */
+  background: #5a5a5a; /* Your set background */
+  opacity: 90%;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
+
 
 #menu li {
   padding: 10px 0;
@@ -252,6 +253,7 @@ body, html {
     padding-left: 0px;
     text-align: center;
     margin-bottom: 15px;
+    margin-top: 15px;
   }
   /* Adjust the name and occupation size */
   .personal-info h1 {
@@ -313,6 +315,7 @@ body, html {
     box-sizing: border-box;
     border-bottom-right-radius: 40px;
     border-bottom-left-radius: 40px;
+    height: 325px;
   }
   body {
     overflow-x: hidden; /* Prevent horizontal scrolling */
